micromobility_car_pilot/local/Project/dev_ws/log/build_2021-05-23_14-10-20/pilot/stderr.log
  File "/home/user/Projects/dev_ws/install/pilot/lib/python3.8/site-packages/pilot/pilot_node.py", line 55
    elif msg.data = "return":
                  ^
SyntaxError: invalid syntax

